# queuing-system

./: CMakeLists.txt  README.md  main.cpp
include/: AllQueuesScreen.hpp  Animator.hpp  Kiosk.hpp  Queue.hpp  QueuesManager.hpp  Station.hpp  TextParameters.hpp  Window.hpp  WindowGrid.hpp  WindowsCreator.hpp  WindowsManager.hpp
include/exceptions/: InvalidAmountException.hpp  InvalidNumberOfStationsException.hpp  NotLetterException.hpp  TooManyCharsException.hpp
src/: AllQueuesScreen.cpp  Animator.cpp  Kiosk.cpp  Queue.cpp  QueuesManager.cpp  Station.cpp  TextParameters.cpp  Window.cpp  WindowGrid.cpp  WindowsCreator.cpp  WindowsManager.cpp
